update tests, procedure resources